2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelopNUnit.addin.xml: Bump MD version.

2007-10-25  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/NUnitAssemblyGroupNodeBuilder.cs, templates/NUnitTestClass.xft.xml:
	  Use tango file icons. Removed obsolete icons.

2007-10-24  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.NUnit.mdp, Services/NUnitService.cs, Gui/nunit-overlay-32.png,
	  Gui/TestResultsPad.cs, Makefile.am,
	  templates/NUnitAssemblyGroup.xpt.xml, templates/NUnitProject.xpt.xml:
	  Updated project icons. Use the base project icon with an overlay to show
	  the type.

2007-10-23  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.NUnit.mdp: Project file names updated by change in MD path
	  functions.

2007-10-16  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.NUnit.mdp: Fix warning level.

2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelopNUnit.addin.xml: Bump MD version.

2007-09-04  Michael Hutchinson <MHutchinson@novell.com>

	* Gui/UnitTestOptionsDialog.cs,
	  Gui/NUnitOptionsPanel.cs: Fix compiler warnings.

2007-08-31  Mike Krüger <mkrueger@novell.com> 

	* Gui/UnitTestOptionsDialog.cs, Gui/NUnitOptionsPanel.cs: Changes due to new
	  property infrastructure.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelopNUnit.addin.xml: Removed the CommandService class. Everything
	  is done directly with CommandManager. Moved all extension node types to
	  MD.Components.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.NUnit.mdp, MonoDevelopNUnit.addin.xml,
	  Services/NUnitService.cs, Gui/UnitTestOptionsDialog.cs,
	  Gui/NUnitAssemblyGroupConfigurationNodeBuilder.cs,
	  Gui/TestResultsPad.cs, Gui/NUnitAssemblyGroupNodeBuilder.cs,
	  Gui/TestAssemblyNodeBuilder.cs, Gui/TestNodeBuilder.cs, Gui/TestPad.cs,
	  Makefile.am: Reorganized the extension point hierarchy. Embedded all
	  add-in manifests as resources.

2007-08-02  Lluis Sanchez Gual <lluis@novell.com> 
